# ccda2omop_claude_py

./: .gitignore  DEVELOPMENT_LOG.md  README.md  pyproject.toml
rules/: allergies_to_conditions.yaml  allergies_to_observations.yaml  devices_to_device_exposure.yaml  immunizations_to_drugs.yaml  labs_to_measurements.yaml  labs_to_observations.yaml  medications_to_drugs.yaml  problems_to_conditions.yaml  problems_to_observations.yaml  procedures_to_measurements.yaml  procedures_to_observations.yaml  procedures_to_procedures.yaml  social_to_conditions.yaml  social_to_measurements.yaml  social_to_observations.yaml  vitals_to_measurements.yaml  vitals_to_observations.yaml
src/ccda2omop/: __init__.py  __main__.py  cli.py
src/ccda2omop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ccda2omop/analyzer/: __init__.py  analyzer.py
src/ccda2omop/ccda/: __init__.py  constants.py  hl7_time.py  models.py  parser.py
src/ccda2omop/converter/: __init__.py  converter.py
src/ccda2omop/mapper/: __init__.py  extractor.py  rule_engine.py  rule_loader.py  rule_mapper.py  rules.py  transforms.py  vocab_loader.py  vocabulary.py
tests/: conftest.py
tests/fixtures/: CONCEPT.csv  sample.xml
tests/test_ccda/: test_hl7_time.py  test_parser.py
tests/test_converter/: test_converter.py
tests/test_mapper/: __init__.py  test_extractor.py  test_rule_engine.py  test_rule_loader.py  test_transforms.py  test_vocab_loader.py  test_vocabulary.py
tests/test_omop/: test_ids.py  test_writer.py
tests/test_report/: test_report.py
(+6 files in other folders)
